--- a/Chat Messenger.csproj
+++ b/Chat Messenger.csproj
@@ -226,6 +226,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Custom Styles\HomePage.css" />
+    <Content Include="Content\Images\Fidget-spinner.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
