Major Code changes!!!! Added functionality to dynamically added Users to Chat List on Starting New Convo. Added a lot of events incuding loading/opening Conversations on selceting particular Users from the list (on the left). Convo. window automatically updates the name based on currently selected User. Also, added functionality to display sent messages on the conversation window. Still a lot more to do! A lot more to code!!!

--- a/Chat Messenger.csproj
+++ b/Chat Messenger.csproj
@@ -253,6 +253,7 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\Custom Scripts\HomePage.js" />
+    <Content Include="Scripts\Custom Scripts\loadash.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
