--- a/Web.config
+++ b/Web.config
@@ -19,7 +19,7 @@
   </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthentication" />
+      <!--<remove name="FormsAuthentication" />-->
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
